tests/baselines/reference/interfaceImplementation3.errors.txt
interfaceImplementation3.ts(8,7): error TS2420: Class 'C4' incorrectly implements interface 'I1'.
  Property 'iAny' is missing in type 'C4' but required in type 'I1'.


==== interfaceImplementation3.ts (1 errors) ====
    interface I1 {
        iObj:{ };
        iNum:number;
        iAny:any;
        iFn():void;
    }
    
    class C4 implements I1 {
          ~~
!!! error TS2420: Class 'C4' incorrectly implements interface 'I1'.
!!! error TS2420:   Property 'iAny' is missing in type 'C4' but required in type 'I1'.
!!! related TS2728 interfaceImplementation3.ts:4:5: 'iAny' is declared here.
        public iObj:{ };
        public iNum:number;
        public iFn() { }
    }
    
    
    